# monarchic-agent-protocol

./: .gitignore  Cargo.toml  Monarchic.AgentProtocol.csproj  PYTHON_README.md  README.md  build.gradle.kts  composer.json  flake.nix  monarchic-agent-protocol.gemspec  package-lock.json  package.json  pubspec.yaml  result  result-1  result-2  result-3  result-4  result-5  result-6  result-7  result-8  settings.gradle.kts  setup.cfg  tsconfig.json
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/proto/java/: TaskExample.java
examples/proto/python/: task.py
examples/ts/: task.ts
schemas/v1/: agent_role.json  artifact.json  event.json  gate_result.json  monarchic_agent_protocol.proto  run_context.json  task.json
scripts/: test-json-schema.sh  test-proto.sh
src/: lib.rs
src/csharp/: MonarchicAgentProtocol.cs
src/dart/lib/: monarchic_agent_protocol.dart  monarchic_agent_protocol.pb.dart  monarchic_agent_protocol.pbenum.dart  monarchic_agent_protocol.pbjson.dart
src/go/: go.mod
src/go/monarchic/agent_protocol/v1/: monarchic_agent_protocol.pb.go
src/java/monarchic/agent_protocol/v1/: AgentRole.java  Artifact.java  ArtifactOrBuilder.java  Event.java  EventOrBuilder.java  GateResult.java  GateResultOrBuilder.java  MonarchicAgentProtocolV1.java  RunContext.java  RunContextOrBuilder.java  Task.java  TaskOrBuilder.java
src/php/Monarchic/AgentProtocol/V1/: Artifact.php  (+5 more)
src/python/monarchic_agent_protocol/: __init__.py  monarchic_agent_protocol_pb2.py
src/ruby/: monarchic_agent_protocol.rb  monarchic_agent_protocol_pb.rb
ts/: index.ts
(+1 files in other folders)
